fix paragraph spacing

--- a/src/css/Bungie.scss
+++ b/src/css/Bungie.scss
@@ -4,7 +4,7 @@
   color: white;
   padding: 30px;
 
-  p {
+  .description, .caption {
     margin-top: 0;
     margin-bottom: 50px;
   }
